--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,8 @@
 body {
   margin: 0;
+  --bg-color: #11aa22;
+  --line-color: white;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--bg-color);
+  color: white;
 }
